@@ -1,0 +1,41 @@
+################### Topbeat Configuration Example #########################
+
+############################# Input - Old Topbeat Config ############################################
+input:
+  # In seconds, defines how often to read server statistics
+  period: 1
+
+
+############################# Output ##########################################
+
+# Configure what outputs to use when sending the data collected by the beat.
+# You can enable one or multiple outputs by setting enabled option to true.
+output:
+
+  ### File as output
+  file:
+    # Enabling file output
+    enabled: true
+
+    # Path to the directory where to save the generated files. The option is mandatory.
+    path: test
+
+
+    # Name of the generated files. The default is `topbeat` and it generates
+    # files: `topbeat`, `topbeat.1`, `topbeat.2`, etc.
+    filename: "test"
+
+    # Maximum size in kilobytes of each file. When this size is reached, the files are
+    # rotated. The default value is 10 MB.
+    #rotate_every_kb: 10000
+
+    # Maximum number of files under path. When this number of files is reached, the
+    # oldest file is deleted and the rest are shifted from last to first. The default
+    # is 7 files.
+    #number_of_files: 7
+
+
+
+############################# Shipper #########################################
+
+shipper:
